change names of classes

--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -37,7 +37,7 @@ mixin card-room(number, price, feedback)
             label(for="carousel-3")
             label(for="carousel-4")
             label(for="carousel-5")
-        .card_container
+        .card-container
             .row.line
                 p(class="card-number") N  
                     span=  number
