--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -10,7 +10,7 @@
   //   border-top-left-radius: 7px;
   //   border-top-right-radius: 7px;
   // }
-  &_container {
+  &-container {
     padding: 25px 30px;
   }
   &-number {
@@ -92,7 +92,7 @@
       border-top-left-radius: 7px;
       border-top-right-radius: 7px;
     }
-    &_container {
+    &-container {
       padding: 10px 20px;
     }
     &-number {
