--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -9,7 +9,7 @@
     margin: 0 auto;
   }
 
-  .container__form{
+  .container-form{
     padding: 32px 30px 40px 40px;
   }
 
@@ -20,34 +20,34 @@
   //   margin-top: 10px;
   // }
 
-  .signup__input--name{
+  .signup-input--name{
     padding-top: 5px;
   }
 
   
-  .signup__input--surname{
+  .signup-input--surname{
     padding-top: 15px;
   }
 
-  .signup__input--birthday{
+  .signup-input--birthday{
     padding-top: 5px;
   }
 
-  .signup__input--data{
+  .signup-input--data{
     padding-top: 25px;
   }
 
-  .signup__input--data--password{
+  .signup-input--data--password{
     padding-top: 25px;
     padding-bottom: 25px;
   }
 
-  .signup__button--payment{
+  .signup-button--payment{
     margin-top: 25px;
     margin-bottom: 25px;
   }
 
-  .sugnup__text{
+  .sugnup-text{
     margin-top: 20px;
     font-size: 19px;
   }
