--- a/src/components/form-search/form-search.scss
+++ b/src/components/form-search/form-search.scss
@@ -65,28 +65,28 @@ border-radius: 4px;
   box-sizing: border-box;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 7px;
-  padding: 30px 40px;
+  // padding: 30px 40px;
 }
 
-.form-search__label{
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 15px;
-  text-transform: uppercase;
-  text-decoration: none;
-  padding-bottom: 10px;
-  margin-top: 10px;
-}
+// .form-search__label{
+//   font-family: "Montserrat";
+//   font-style: normal;
+//   font-weight: bold;
+//   font-size: 18px;
+//   line-height: 15px;
+//   text-transform: uppercase;
+//   text-decoration: none;
+//   padding-bottom: 10px;
+//   margin-top: 10px;
+// }
 
-.form-search__label-arrival{
-    padding-right: 140px;
-}
+// .form-search__label-arrival{
+//     padding-right: 140px;
+// }
 
-.form-search__label-guests{
-  padding-top: 40px;
-}
+// .form-search__label-guests{
+//   padding-top: 40px;
+// }
 
 // .form__search__btn{
 //   margin-left: 10px;
