--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -4,11 +4,11 @@ include ../mixins.pug
 div
   div(class="nav-wrapper")
     div(class="container menu")
-      div(id="logo" class="menu__logo")
-      label(for="drop" class="menu__logo_toggle") 
+      div(id="logo" class="menu-logo")
+      label(for="drop" class="menu-logo-toggle") 
           i(class="fa fa-bars" aria-hidden="true")
-      input(type="checkbox" class="menu__logo_drop" id="drop")
-      ul(class="menu__nav")
+      input(type="checkbox" class="menu-logo-drop" id="drop")
+      ul(class="menu-nav")
         +list('О нас')
         +list('Услуги')
         +list('Вакансии')
