--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -2,7 +2,7 @@ mixin logo()
     img.logo
 
 mixin input-text(name)
-  input(placeholder = name, type = "text", class="input_text")
+  input(placeholder = name, type = "text", class="input-text")
 
 mixin list(name)
   li 
