--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -6,35 +6,29 @@ include ../mixins.pug
             a(href="#" class="close")
                 i(class="fa fa-arrow-left")
             h3(class="title") Даты пребывания в отеле
-            div(class="settings__datepicker")
+            div(class="settings-datepicker")
                 include ../../blocks/airdatepicker/single_airpicker.pug
             h3(class="title") гости
-            div(class="settings__dropdown")
+            div(class="settings-dropdown")
                 include ../../blocks/littleDropdown/littleDropdown.pug
-            h3(class="title room__title--price") Диапазон цены
-            div(class="settings__range")
-                input(type="text" class="slider__range__price" id="amount")
-                div(id="slider-range")  
-                div.slider__range__title Стоимость за сутки пребывания в номере 
-            h3(class="title room__title--checkboxes") Checkbox Buttons             
+            h3(class="title room-title--price") Диапазон цены
+            div(class="settings-range")
+                include ../../blocks/range-slider/range-slider.pug
+            h3(class="title room-title--checkboxes") Checkbox Buttons             
             .blocks
                 +checkbox('Smoking', 'Можно курить', "room__checkbox")
                 +checkbox('Pets', 'Можно с питомцами', "room__checkbox")
                 +checkbox('Guests',  "Можно пригласить гостей (до 10 человек)",
             "room__checkbox")
-            h3(class="title room__title--availability") Доступность 
+            h3(class="title room-title--availability") Доступность 
             .blocks
                 +description-checkbox("Широкий коридор", "Широкий коридор", "Ширина коридоров в номере не менее 91 см.")
                 +description-checkbox("Помощник для инвалидов", "Помощник для инвалидов", "На 1 этаже вас встретит специалист  и проводит до номера.")
-            h3(class="title  room__title--comfort") Удобства номера
+            h3(class="title  room-title--comfort") Удобства номера
             div(class="settings-comfort")
                 include ../../blocks/comfort-dropdown/comfort-dropdown.pug
-            //- p 
-            //-     label(for="amount") Price range:
-            //-     input(type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;")
-            //- div(id="slider-range")
     .right-side
-        h1(class="title__main") Номера, которые мы для вас подобрали
+        h1(class="title-main") Номера, которые мы для вас подобрали
         span(class="slide" id="slide")
             a(href="#")
                 i(class="fa fa-arrow-right")
