--- a/src/components/signin-form/signin-form.scss
+++ b/src/components/signin-form/signin-form.scss
@@ -1,20 +1,20 @@
 
 
-.container__form {
+.container-form {
   align-content: center;
   margin: 0 auto;
 }
 
-.input__signin {
+.input-signin {
   margin-top: 8px;
   margin-bottom: 3px;
 }
 
-.input__signin--second {
+.input-signin--second {
   margin-top: 12px;
 }
 
-.btn__signin {
+.btn-signin {
   margin-top: 26px;
 }
 
@@ -24,11 +24,11 @@
   line-height: 18px;
 }
 
-.text__signin{
+.text-signin{
     margin-top: 65px;
 }
 
-.btn__create{
+.btn-create{
     margin-top: 45px;
 }
 
