--- a/src/components/signup-page/signup-page.scss
+++ b/src/components/signup-page/signup-page.scss
@@ -8,7 +8,7 @@
     width: 100%;
 }
 
-.sugnup__background{
+.sugnup-background{
     min-height: 930px;
     background-image: url(../images/bg_in.jpg);
     background-repeat: no-repeat;
