--- a/css/main.css
+++ b/css/main.css
@@ -1080,7 +1080,7 @@ input:disabled + label:before {
   margin-top: -29px;
 }
 
-.settings__dropdown .dd-button {
+.settings-dropdown .dd-button {
   width: 266px;
   height: 44px;
 }
