--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,16 +1,16 @@
 include ../mixins.pug
 footer
   .footer.container
-    .footer__nav
-      .footer__nav__block
-        .logo(class="footer__block logo")
+    .footer-nav
+      .footer-nav-block
+        .logo(class="footer-block logo")
         div
           p(style='white-space:pre;' class="footer-slogan")
             | Бронирование номеров в лучшем 
             | отеле 2019 года по версии
             | ассоциации «Отельные взгляды»
-      .footer__nav__block
-        h3(class="footer__block subtitle") Навигация
+      .footer-nav-block
+        h3(class="footer-block subtitle") Навигация
         ul
           li 
             a О нас
@@ -20,8 +20,8 @@ footer
             a Служба поддержки
           li
             a Услуги
-      .footer__nav__block
-        h3(class="footer__block subtitle") О нас
+      .footer-nav-block
+        h3(class="footer-block subtitle") О нас
         ul
           li 
             a О сервисе
@@ -31,8 +31,8 @@ footer
             a Вакансии
           li 
             a Инвесторы
-      .footer__nav__block
-        h3(class="footer__block subtitle") Служба поддержки
+      .footer-nav-block
+        h3(class="footer-block subtitle") Служба поддержки
         ul
           li 
             a Соглашения
@@ -40,16 +40,16 @@ footer
             a  Сообщества
           li
             a Связь с нами
-      .footer__nav__block
-        h3(class="footer__block subtitle") Подписка
+      .footer-nav-block
+        h3(class="footer-block subtitle") Подписка
         p(style='white-space:pre;' class="subtitle-describtion")
           | Получайте специальные
           | предложения и новости сервиса
         +input-subscription("Email")
   hr(class="footer-strip")
-  div(class="footer__details").container
+  div(class="footer-details").container
      .flex-row
-        p(class="footer__details__copyright") Сорyright &copy; 2018 Тохin отель. Все права зачищены. 
+        p(class="footer-details-copyright") Сорyright &copy; 2018 Тохin отель. Все права зачищены. 
         ul.row
             li
               a(href="#")
