--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -1,7 +1,7 @@
 include ../mixins.pug
 
 div(class="information")
-    div(class="information_top-part")
+    div(class="information-top-part")
         div(class="gallery-top")
             img(src=require("./images/mainA.jpg") class="bigImg")
         div(class="gallery-bottom")
@@ -9,28 +9,28 @@ div(class="information")
                 img(src=require("./images/gallery-first.jpg") class="bigImg")
             div(class="gallery-bottom--second")
                 img(src=require("./images/gallery-second.jpg") class="bigImg")
-    div(class="information_bottom-part row" class="container flex-row")
-        div(class="bottom-part__left")
-            div(class="row room__information--info")
+    div(class="information-bottom-part row" class="container flex-row")
+        div(class="bottom-part--left")
+            div(class="row room-information--info")
                 .blocks
-                    h3(class="title information__title information__title--info") Сведения о номере
+                    h3(class="information-title information-title--info") Сведения о номере
                     +room-information("mood", "Комфорт", "Шумопоглощающие стены", " information__border") 
                     +room-information("location_city", "Удобство", "Окно в каждой из спален", " information__border")
                     +room-information("whatshot", "Уют", "Номер оснащён камином")
-                .blocks.information__impression
-                    h3(class="title information__title information__title--impression") Впечатления от номера
+                .blocks.information-impression
+                    h3(class="information-title information-title--impression") Впечатления от номера
                     include ../../blocks/donutChart/donutChart.pug
             .blocks 
-                h3(class="title information__title information__title--details") Отзывы посетителей номера
+                h3(class="information-title information-title--details") Отзывы посетителей номера
                 +feedback(require("./images/photo1.jpg"), "Мурад Сарафанов", '5 дней назад', "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.")
-                div(class="information__impression-second")
+                div(class="information-impression--second")
                     +feedback(require("./images/photo2.jpg"), "Патрисия Стёклышкова", 'Неделю назад', "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент")
-            div(class="row row-flex")
-                .blocks.information__rules
-                    h3(class="title  information__title information__title--rules") Правила
+            div(class="flex-row")
+                .blocks.information-rules
+                    h3(class="information-title information-title--rules") Правила
                     +bullet-list("Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00" + ", "   +  " а выезд до 12:00 ")
-                .blocks.information__cancel
-                    h3(class="title  information__title information__title--cancel") Отмена
+                .blocks.information-cancel
+                    h3(class="information-title information-title--cancel") Отмена
                     p(style='white-space:pre;' class="information-text")
                         | Бесплатная отмена в течение 48 ч. После
                         | этого при отмене не позднее чем за 5 дн. до 
