--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -1,15 +1,13 @@
 .wrapper
   .wrap
-    .container__form
-        h1(
-          class="title__main"
-        ) Войти
+    .container-form
+        h1(class="title-main") Войти
 
-        input(class="input_text input__signin" placeholder="Email")
-        input(class="input_text input__signin input__signin--second" placeholder="Пароль")
+        input(class="input-text input-signin" placeholder="Email")
+        input(class="input-text input-signin input-signin--second" placeholder="Пароль")
 
-        button(type="button" class="btn  btn-confirm btn__signin") Войти
+        button(type="button" class="btn  btn-confirm btn-signin") Войти
         
         .flex-row
-          div(class="text text__signin") Нет аккаунта на Toxin?
-          +button-signin('Создать', 'signin-page.html', "btn__create")
+          div(class="text text-signin") Нет аккаунта на Toxin?
+          +button-signin('Создать', 'signin-page.html', "btn-create")
