--- a/src/components/signup-page/signup-page.pug
+++ b/src/components/signup-page/signup-page.pug
@@ -6,7 +6,7 @@ html
     include ../header/header.pug
     .clear
 
-    .sugnup__background
+    .sugnup-background
       include ../form-register/form-register.pug
     include ../footer/footer.pug
 
